# BUT2-C-Prog

Systeme/: CMakeLists.txt  code_mini-projet.odt
Systeme/Correction Tp/TP2/: 1_copie_block.c  1_copie_char.c  2_binhexasc.c  3_copie.c  Makefile
Systeme/Correction Tp/TP3/: 1_cat.c  1_cat_multiple.c  2_tab.c  3_copie.c  Makefile
Systeme/Correction Tp/TP4-5/: 1_fork_simple.c  2_petits-fils.c  3_creerterm.c  4_creerterm_root.c  5_system.c  Makefile  verif_system.c
Systeme/Correction Tp/TP6/: 1_execute_bas.c  1_execute_haut.c  2_sigaction_bsd.c  2_sigaction_sysv.c  2_signal_bsd.c  2_signal_sysv.c  3_synchro.c  Makefile
Systeme/Correction Tp/TP7/: 1_threads.c  2_calcul.c  3_concur.c  Ex1_Threads.java  Ex2_Calcul.java  Ex3_Concur.java  Makefile
Systeme/Prog_system/: CMakeLists.txt
Systeme/Prog_system/Prog system/TP_n°1/: a.out  binhexasc  binhexasc.c  contatenation.c  impression.c  res.hex  text.txt
Systeme/Prog_system/Prog system/TP_n°2/: copieFile.c  formatBin.c  impression.c  origine.txt
Systeme/Prog_system/Prog system/TP_n°3/: affiche  affiche.c
Systeme/Prog_system/Prog system/TP_n°4/: a.out  createTerm.c
Systeme/Prog_system/Prog system/TP_n°5/: a.out  entree.txt  redirect  redirect.c  sortie.txt
Systeme/Prog_system/Prog system/revisions/: abs  abs.c  divise  divise.c  exo1  exo1.c  exo2  exo2.c  exo3  exo3.c  exo4  exo4.c  exo5  exo5.c  facto.c  somme  somme.c  suiteV  suiteV.c  triCroissant  triCroissant.c
Systeme/mini-projet/: CMakeLists.txt  comare  compare.c  rapport.odt  texte.txt  xxd  xxd.c
Systeme/td1/: CMakeLists.txt  exo1  exo1.c  exo2  exo2.c  exo3  exo3.c  exo4  exo4.c  exo5  exo5.c
Systeme/tp2/: CMakeLists.txt  binhexasc  binhexasc.c  main  main.c  res.ascii  sortie.txt
Systeme/tp3/: CMakeLists.txt  fich.txt  main  main.c  sortie.txt
Systeme/tp4/: CMakeLists.txt  main  main.c
Systeme/tp5/: CMakeLists.txt  main  main.c
reseaux/tp1/: CMakeLists.txt  client  client.c  serveur  serveur.c
reseaux/tp2/: CMakeLists.txt  actif_client  actif_client.c  actif_serveur  actif_serveur.c  client_serveur.h  comments.txt  passif_client  passif_client.c  passif_serveur  passif_serveur.c
reseaux/tp3/: CMakeLists.txt  README  client  client.c  comments.txt  serveuri1  serveuri1.c  serveuri2  serveuri2.c  serveurp1  serveurp1.c  serveurp2  serveurp2.c
reseaux/tp4/: CMakeLists.txt  client  client.c  comment.txt  serveur1  serveur1.c  serveur2  serveur2.c  serveur3  serveur3.c  serveurbase  serveurbase.c  serveurthreads  serveurthreads.c
reseaux/tp5/: CMakeLists.txt  README  client  client.c  serveur  serveur.c
